--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,9 @@
     <string name="startServices">Start Services</string>
     <string name="selectpreferable">Select Preferable Timings</string>
     <string name="done">Done</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="address">Address</string>
+    <string name="gender">Gender</string>
 
 </resources>
